--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-keras
-scikit-learn
-pandas==0.25.1
-pip==19.3.1
-wheel==0.30.0
+pip==20.0.2
+wheel==0.34.2
+keras==2.3.1
+scikit-learn==0.22.2
+pandas==1.0.3
 beautifulsoup4==4.9.0
 aiohttp==3.6.2
-PyYAML==3.12
+PyYAML==5.1
