--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ wheel==0.34.2
 keras==2.3.1
 scikit-learn==0.22.2
 pandas==1.0.3
+matplotlib==3.2.1
 beautifulsoup4==4.9.0
 aiohttp==3.6.2
 PyYAML==5.1
